fixed gap på bandsiden

--- a/src/pages/Bands.module.css
+++ b/src/pages/Bands.module.css
@@ -6,11 +6,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 50px;
-  margin: 20px auto;
   max-width: 1110px;
   padding: 0 20px;
   background-color: #3e3e42;
-
   padding: 20px 20px 30px 20px;
 }
 
